--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ffmpeg-static": "^5.2.0",
     "fs": "^0.0.1-security",
     "next": "15.2.4",
+    "openai": "^4.93.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
